--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
     "dev": "next dev",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
+    "seed": "node scripts/seed.js",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
-    "@vercel/postgres": "^0.5.0",
+    "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "dotenv-run-script": "^0.4.1",
     "next": "15.0.0-canary.28",
     "postcss": "8.4.31",
     "react": "19.0.0-rc-6230622a1a-20240610",
